sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:7: error: not found: value a
    a = trouveBaseJoueur(i,nbrB)._3
    ^SelectBaseball:28: error: not found: value posi
  posi = getHolePosition();
  ^SelectBaseball:29: error: not found: value posi
  for (i<-posi to base-1){
          ^